deploy: 45dc01b6a05d9495218aa0d4a85eb3e4715d8c7d

--- a/genindex.html
+++ b/genindex.html
@@ -1417,6 +1417,8 @@ document.write(`
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.calculators.html#wfl.calculators.vasp.Vasp.param_dict_of_key">param_dict_of_key() (wfl.calculators.vasp.Vasp method)</a>
+</li>
       <li><a href="wfl.cli.html#wfl.cli.cli_options.param_fname">param_fname() (in module wfl.cli.cli_options)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.params.Params">Params (class in wfl.utils.params)</a>
@@ -1437,10 +1439,10 @@ document.write(`
 </li>
       <li><a href="wfl.select.html#wfl.select.by_descriptor.prep_descs_and_exclude">prep_descs_and_exclude() (in module wfl.select.by_descriptor)</a>
 </li>
-      <li><a href="wfl.fit.gap.html#wfl.fit.gap.multistage.prep_params">prep_params() (in module wfl.fit.gap.multistage)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.fit.gap.html#wfl.fit.gap.multistage.prep_params">prep_params() (in module wfl.fit.gap.multistage)</a>
+</li>
       <li><a href="wfl.generate.html#wfl.generate.atoms_and_dimers.prepare">prepare() (in module wfl.generate.atoms_and_dimers)</a>
 </li>
       <li><a href="wfl.fit.html#wfl.fit.ace.prepare_configs">prepare_configs() (in module wfl.fit.ace)</a>
