deploy: 1193a85fb39a2cae7da482a5d6c5cbb28eb7b9f0

--- a/genindex.html
+++ b/genindex.html
@@ -1072,15 +1072,13 @@ document.write(`
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.get_default_multiplicity">get_default_multiplicity() (wfl.calculators.orca.ORCA static method)</a>
 </li>
-      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_homo">get_homo() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_homo">get_homo() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
+</li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.basinhopping.BasinHoppingORCA.get_multiplicity">get_multiplicity() (wfl.calculators.orca.basinhopping.BasinHoppingORCA method)</a>
 </li>
       <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.get_remote_info">get_remote_info() (in module wfl.autoparallelize.utils)</a>
-</li>
-      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.get_root_global_seed">get_root_global_seed() (in module wfl.autoparallelize.utils)</a>
 </li>
       <li><a href="wfl.utils.html#wfl.utils.version.get_wfl_version">get_wfl_version() (in module wfl.utils.version)</a>
 </li>
@@ -1123,6 +1121,8 @@ document.write(`
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.is_converged">is_converged() (wfl.calculators.orca.ORCA method)</a>
 </li>
       <li><a href="wfl.generate.html#wfl.generate.atoms_and_dimers.isolated_atom_from_e0">isolated_atom_from_e0() (in module wfl.generate.atoms_and_dimers)</a>
+</li>
+      <li><a href="wfl.autoparallelize.html#wfl.autoparallelize.utils.items_inputs_generator">items_inputs_generator() (in module wfl.autoparallelize.utils)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1350,8 +1350,6 @@ document.write(`
 </li>
         <li><a href="wfl.utils.html#module-wfl.utils.round_sig_figs">wfl.utils.round_sig_figs</a>
 </li>
-        <li><a href="wfl.utils.html#module-wfl.utils.vector_utils">wfl.utils.vector_utils</a>
-</li>
         <li><a href="wfl.utils.html#module-wfl.utils.version">wfl.utils.version</a>
 </li>
         <li><a href="wfl.utils.html#module-wfl.utils.vol_composition_space">wfl.utils.vol_composition_space</a>
@@ -1451,8 +1449,6 @@ document.write(`
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="wfl.utils.html#wfl.utils.vector_utils.random_three_vector">random_three_vector() (in module wfl.utils.vector_utils)</a>
-</li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.read_dipole">read_dipole() (wfl.calculators.orca.ORCA method)</a>
 </li>
       <li><a href="wfl.calculators.orca.html#wfl.calculators.orca.ORCA.read_frequencies">read_frequencies() (wfl.calculators.orca.ORCA method)</a>
@@ -1965,6 +1961,8 @@ document.write(`
         <li><a href="wfl.calculators.orca.html#module-wfl.calculators.orca">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl.calculators.orca.basinhopping
 
@@ -1972,8 +1970,6 @@ document.write(`
         <li><a href="wfl.calculators.orca.html#module-wfl.calculators.orca.basinhopping">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     wfl.calculators.utils
 
@@ -2434,13 +2430,6 @@ document.write(`
 
       <ul>
         <li><a href="wfl.utils.html#module-wfl.utils.round_sig_figs">module</a>
-</li>
-      </ul></li>
-      <li>
-    wfl.utils.vector_utils
-
-      <ul>
-        <li><a href="wfl.utils.html#module-wfl.utils.vector_utils">module</a>
 </li>
       </ul></li>
       <li>
